# backend-rp-dacade-demo

./: Cargo.toml  Makefile  README.md  dfx.json  icdeploy.sh  localdeploy.sh  package-lock.json  package.json
src/rpdemo_backend/: Cargo.toml  rpdemo_backend.did
src/rpdemo_backend/src/: lib.rs
src/rpdemo_frontend/: package.json
src/rpdemo_frontend/src/: App.js
