[package]
name = "rpdemo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10"
ic-cdk-macros = "0.8"
ic-stable-structures = "0.6"
serde = "1.0.197"
ic-certification = "2.4.0"
serde_bytes = "0.11.14"
include_dir = "0.7.3"
ic-verifiable-credentials = { git = "https://github.com/dfinity/verifiable-credentials-sdk" }
ic-canister-sig-creation = "1.1"
ic-crypto-getrandom-for-wasm = { git="https://github.com/dfinity/ic", rev="faacac31032a9b98020475eb608fd63455603556" }